[package]
name = "config-rs"
version = "0.1.1"
edition = "2021"
categories = ["config", "encoding", "parser-implementations"]
description = "A lib of parsing config file for Rust."
keywords = ["config", "ini"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/zerodegress/config-rs"
repository = "https://github.com/zerodegress/config-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "^7.1"

[features]
default = ["ini"]
ini = []